# porygonz

./: .gitignore  Dockerfile  Makefile  README.md  config.py  porygonz.py  pyproject.toml
docs/: ENHANCED_PROMPT_UPDATE.md
fp/: battle.py  llm_battle.py  run_battle.py
tests/: test_concise_output.py  test_decision_parsing.py  test_enhanced_prompt.py
